egress/singlehost/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-baidu
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: baidu
